Revision history for CGI-Info

0.81
	Use Test::Needs
	Added t/version.t
	Added t/tabs.t
	Mark axios/1.6.7, ias_crawler and ZoominfoBot as robots
	Block "/**/ORDER/**/BY/**/" in the argument

0.80	Fri Jan 19 08:05:29 EST 2024
	Added documentroot() as a synonym to rootdir()
		For compatability with Apache
	Allow "use lib CGI::Info::script_dir() . '../lib';"
	Mark Facebook as a search engine, not a robot

0.79	Wed Jan  3 14:25:42 EST 2024
	Better arg count checking
	Mark techiaith.cymru as a robot
	Facebook FBCLID can have "--" which can cause false positives
	Mark ChatGPT as a search engine
	Added root_dir() as synonym to rootdir()
		That's the naming that CHI uses

0.78	Fri Oct  6 13:59:51 EDT 2023
	Set HTTP status to 403 on HTTP_USER_AGENT SQL injection attack
	Test::Exception hasn't been used for sometime, so removed dependancy

0.77	Tue Aug 15 16:49:51 EDT 2023
	Reduce the size of the cache
	Added Dreamhost monitor as a robot

0.76	Tue Aug  8 20:43:57 EDT 2023
	Marked serpstatbot as a robot
	Only load JSON::MaybeXS when needed

0.75	Sat Apr 15 14:44:30 EDT 2023
	Remove most calls to substr
	Added Mediatoolkitbot as a robot
	Added NetcraftSurveyAgent as a robot
	Added Expanse as a robot
	Added Bytespider as a robot
	Added t/pod-synopsis.t
	Refactored t/unused.t and t/10-compile.t
	Fixed Github Actions on Alpine Linux, FreeBSD and OpenBSD
	Label AmazonBot as a search engine
	Block directory traversal attacks
	Set HTTP status to 403 on blocked attacks
	Catch another SQL injection attempt

0.74	Wed Jan  4 22:16:12 EST 2023
	Added python-requests/2.27.1 as a robot
	Use latest Github Actions environment
	Support Sec-CH-UA-Mobile
	Calling new on an object now returns a clone rather than setting the defaults in the new object

0.73	Fri Oct 29 07:32:37 EDT 2021
	Attempt to fix https://www.cpantesters.org/cpan/report/6db47260-389e-11ec-bc66-57723b537541

0.72	Thu Oct 28 09:08:43 EDT 2021
	More sensible default statuses when params() has yet to be called