@@ -6,6 +6,7 @@ Revision history for CGI-Info
 	Added t/tabs.t
 	Mark axios/1.6.7, ias_crawler and ZoominfoBot as robots
 	Block "/**/ORDER/**/BY/**/" in the argument
+	Strip NUL byte poison
 
 0.80	Fri Jan 19 08:05:29 EST 2024
 	Added documentroot() as a synonym to rootdir()
